--- a/app.json
+++ b/app.json
@@ -1,10 +1,14 @@
 {
   "expo": {
     "scheme": "acme",
+    "newArchEnabled": true,
     "plugins": [
       "expo-router"
     ],
     "name": "JobFinder",
-    "slug": "JobFinder"
+    "slug": "JobFinder",
+    "android": {
+      "package": "com.anonymous.JobFinder"
+    }
   }
 }
