--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-router": "~4.0.2",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
+    "expo-updates": "^0.26.15",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
